Add search and update chat FE